<resources>
    <string name="app_name">MF v2</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter_service_number">Enter Service Number</string>
    <string name="cadetName">Cadet Name</string>
    <string name="serviceNumber">Service Number</string>
    <string name="Troop">Troop</string>
    <string name="Jan">Jan</string>
    <string name="abs">Abdominis</string>
</resources>