<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mobileback"
    android:clickable="false"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top">

        <ImageView
            android:layout_width="320dp"
            android:layout_height="230dp"
            android:padding="0dp"
            android:src="@drawable/marshal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:padding="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_24" />

        <EditText
            android:id="@+id/username"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:padding="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lock_24" />

        <EditText
            android:id="@+id/password"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/White"
        android:background="@drawable/rounded_box2"
        android:text="@string/login"
        android:textSize="20sp">

    </Button>


</LinearLayout>